# ComfyUI-FileBrowserAPI

./: .gitignore  LICENSE.txt  README.md  __init__.py  file_folder_api.py  pyproject.toml
.github/workflows/: publish.yml
PathSelectorExample/: __init__.py  path_selector_example.py
PathSelectorExample/js/: path_selector_script.js
js/: file_folder_api.js
